[package]
name = "rs_lib"
version = "0.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
wasm-bindgen = "=0.2.83"
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"
wasm-streams = "0.3.0"
futures-util = { version = "0.3.25", features = ["async-await"] }
# tokio = { version = "1.24.1", features = ["fs", "io-util"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  "console",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "ReadableStream",
  "Window",
]
